minor setup tweaks